Version 2.02.73 - 
================================
  Fix 'void*' arithmetic warning in some functions from libdm-iface.c.
  Fix const warning in dev_manager_info() and _dev_manager_lv_rmnodes().
  Fix const warning in archive_file structure from archive.c.
  Clean generated files .exported_symbols_generated, example.conf for distclean.
  Handle failure of all mirrored log devices and all but one mirror leg. 
  Disallow 'mirrored' log type for cluster mirrors.
  Do not use VPATH in include/Makefile.
  Fix exported_symbols generation to use standard compiler arguments.
  Use #include <> not "" in lvm2app.h which gets installed on the system.
  Make lib and liblvm.device-mapper wait for include file generation.
  Fix configure to supply DEFAULT_RUN_DIR to Makefiles.
  Fix wrong number of mirror log at allocate policy

Version 2.02.72 - 28th July 2010  [CVE-2010-2526]
=================================================
  Change clvmd to communicate with lvm2 via a socket in /var/run/lvm.
  Return controlled error if clvmd is run by non-root user.
  Add configure --default-run-dir for /var/run/lvm.
  Never use clvmd singlenode unless explicitly requested with -Isinglenode.

Version 2.02.71 - 28th July 2010
================================
  Document LVM fault handling in doc/lvm_fault_handling.txt.
  Make vgck warn about missing PVs.
  Clarify help text for vg_mda_count.
  Check if cluster log daemon is running before allowing cmirror create.
  Add unit-tests dir.
  Add configure --enable-testing and reports and report-generators dirs.
  Correct LV list order used by lvconvert when splitting a mirror.
  Check if LV with specified name already exists when splitting a mirror.
  Fix suspend/resume logic for LVs resulting from splitting a mirror.
  Update pvcreate, {pv|vg}change, and lvm.conf man pages about metadataignore.
  Switch cmirrord and clvmd to use dm_create_lockfile.
  Allow clvmd pidfile to be configurable.
  Update comments about memory handling in lvm2app.h.